tests/rosetta/transpiler/OCaml/algebraic-data-types.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/algebraic-data-types.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Algebraic-data-types" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/algebraic-data-types.ml", line 62, characters 65-67:
62 |   __ret := (Obj.magic ((((((((("T(" ^ __show ((List.assoc ("cl") !m))) ^ ", ") ^ treeString ((List.assoc ("le") !m))) ^ ", ") ^ __show ((List.assoc ("aa") !m))) ^ ", ") ^ treeString ((List.assoc ("ri") !m))) ^ ")")) : string); raise Return
                                                                      ^^
Error: This expression has type Obj.t but an expression was expected of type
         (string * 'a) list
